@@ -1,4 +1,4 @@
-AUX grub-0.97-fpie_check.patch 1426 RMD160 a1b2f494e50f67fd3327eced036f6a96473d5085 SHA1 3267e7615bd67da70383b34191457d77c36a5145 SHA256 41a7990d9ffa50fc41e0a542f372c193e6b649c02d522002816fdaf9faa60dd9
+AUX grub-0.97-fpie_check.patch 1465 RMD160 bfa46d498e1693a100970a5846269ad4c1a095b2 SHA1 e420b4d0925bca5cd269e8633129e8a1e6a058f3 SHA256 826b5ba7a0768fedf174bdb4756ac2d5c669f0506b1333553e29e434f069dfc1
 AUX grub-0.97-gcc4-hardened.patch 462 RMD160 f1429fd7ebddede7dcc243e897ae3ff24ee19e06 SHA1 75860a643ac0588ef60fcc8e26fca734b11b3dae SHA256 24f135ba1404ac68a379d21885563adec58a38a7e2c05735a9328cd78aef19c2
 AUX grub.conf.gentoo 659 RMD160 9ab841d6fdd03be3f99f109ed3dfe0a5027e66d2 SHA1 26455e5c3ba2043be970bf64ce2386119fd35f30 SHA256 5e3a209af537090456546704e52e0dee8f8600944a34184f79776523cdaa9a25
 DIST grub-0.97-patches-1.9.tar.bz2 51809 RMD160 a745902212dbd22f4d9f0bb0d563ffd44b429eaa SHA1 1d9da2df8bccef9821ebbbc2f5c5353dbd90bf4d SHA256 6b8445c9260803f059031cbe7475a45fee6499fc2dbd911288af6169455c4028
@@ -6,5 +6,5 @@ DIST grub-0.97.tar.gz 971783 RMD160 7fb5674edf0c950bd38e94f85ff1e2909aa741f0 SHA
 DIST splash.xpm.gz 33856 RMD160 2fead61f91c368429e80936248bb02af2bdf15ff SHA1 98e679f9698be43426f971f89a088c053e8c804a SHA256 b95600f777331b0dd31d51c68f60f0e846e4c8b628857a41165f4e6b30e6acaf
 EBUILD grub-0.97-r10.ebuild 9101 RMD160 f7616847570e143952587dc1aa1dd2737c60041a SHA1 24110a0dbff3b596fcb8ef12afb7d6ad840138cd SHA256 46bf359b9805b1b4b06b46f3d4bef0903df61d41e296660c7ce0ea8d178c146a
 EBUILD grub-0.97-r11.ebuild 9154 RMD160 f60f29d7090249ed6ba49a9f2ff1d49aea5d76f0 SHA1 626962c46cdf2223202cb09c01e81fcd15a28525 SHA256 ee631ec4d57686ba4ef992d723ffaee99189dd96a9e4265c6b0974c760389be8
-MISC ChangeLog 316 RMD160 bebb6be3f4e80306483c8fc2b1385c43ea55b265 SHA1 b018a0a5204f94b3d8644ab50cfdb5f6f163aaf9 SHA256 c33bf392151e2e9f5409a332acf24b06ca379fa9b1c1d4130275eb80be474f7f
+MISC ChangeLog 456 RMD160 77608c92e86bf7dc013f514f960bf6d5248b9890 SHA1 fa2e185f198375c04ec179283fe5aa549fb1e9bc SHA256 57c333e711360ac439025b0a055e5d67974f790a204bda67be42fa0bd7eab283
 MISC metadata.xml 262 RMD160 afabce9377772aefb54102e9ef237de6bb1561f5 SHA1 c38f9b99d8a84beb40c114283d8d7ddd4ac43d9e SHA256 35a9c56d9c8418806062854a360c27690d25159524df71f28bbd4d644e8706f3
